@@ -2,8 +2,8 @@ package com.mggcode.gestion_bd_elecciones.controller.autonomicas;
 
 import com.mggcode.gestion_bd_elecciones.exception.ModelNotFoundException;
 import com.mggcode.gestion_bd_elecciones.logic.autonomicas.CircunscripcionPartidoOficial;
+import com.mggcode.gestion_bd_elecciones.logic.autonomicas.CircunscripcionPartidoSondeo;
 import com.mggcode.gestion_bd_elecciones.logic.autonomicas.Comparador;
-import com.mggcode.gestion_bd_elecciones.logic.autonomicas.ComparadorCombinado;
 import com.mggcode.gestion_bd_elecciones.model.autonomicas.CircunscripcionPartido;
 import com.mggcode.gestion_bd_elecciones.model.autonomicas.Key;
 import com.mggcode.gestion_bd_elecciones.service.autonomicas.ACircunscripcionPartidoService;
@@ -145,14 +145,42 @@ public class ACircunscripcionPartidoController {
     }
 
     //Mas votados en una Autonomia(De la que se pide codigo) por provincia (elimina los municipios)
-    @GetMapping("/mayorias/{codigo}")
-    public ResponseEntity<List<CircunscripcionPartido>> masVotadosAutonomicoPorProvincia(@PathVariable("codigo") String cod1) {
+    @GetMapping("/mayorias/oficial/{codigo}")
+    public ResponseEntity<List<CircunscripcionPartido>> masVotadosAutonomicoPorProvinciaOficial(@PathVariable("codigo") String cod1) {
         List<CircunscripcionPartido> mayoritarios = circunscripcionPartidoService.findAll()
                 .stream().filter(x -> x.getKey().getCircunscripcion().startsWith(cod1.substring(0, 2)))
                 .filter(x -> x.getKey().getCircunscripcion().endsWith("000"))
                 .filter(x -> !x.getKey().getCircunscripcion().startsWith("99"))
                 .sorted(new CircunscripcionPartidoOficial().reversed())
-                .collect(Collectors.toList());
+                .toList();
+        List<String> provincia = new ArrayList<>();
+        List<CircunscripcionPartido> filtrada = new ArrayList<>();
+        for (CircunscripcionPartido cp : mayoritarios) {
+            String codigo = cp.getKey().getCircunscripcion().substring(0, 4);
+            if (!provincia.contains(codigo)) {
+                filtrada.add(cp);
+                provincia.add(codigo);
+            }
+        }
+        //Si añadimos este remove(0) quitaríamos los datos de la CCAA, dejando solo el de sus provincias
+        if (provincia.size() != 1) {
+            var remove = filtrada.stream().filter(x -> x.getKey().getCircunscripcion().endsWith("00000")).toList();
+            if(remove.size() >0){
+                filtrada.remove(remove.get(0));
+            }
+            //filtrada.remove(0);
+        }
+        filtrada.sort(new Comparador());
+        return new ResponseEntity<>(filtrada, HttpStatus.OK);
+    }
+    @GetMapping("/mayorias/sondeo/{codigo}")
+    public ResponseEntity<List<CircunscripcionPartido>> masVotadosAutonomicoPorProvinciaSondeo(@PathVariable("codigo") String cod1) {
+        List<CircunscripcionPartido> mayoritarios = circunscripcionPartidoService.findAll()
+                .stream().filter(x -> x.getKey().getCircunscripcion().startsWith(cod1.substring(0, 2)))
+                .filter(x -> x.getKey().getCircunscripcion().endsWith("000"))
+                .filter(x -> !x.getKey().getCircunscripcion().startsWith("99"))
+                .sorted(new CircunscripcionPartidoSondeo().reversed())
+                .toList();
         List<String> provincia = new ArrayList<>();
         List<CircunscripcionPartido> filtrada = new ArrayList<>();
         for (CircunscripcionPartido cp : mayoritarios) {
@@ -169,12 +197,11 @@ public class ACircunscripcionPartidoController {
         filtrada.sort(new Comparador());
         return new ResponseEntity<>(filtrada, HttpStatus.OK);
     }
-
     @RequestMapping(path = "/mayorias/{codigo}/csv")
     public void masVotadosAutonomicoPorProvinciaInCsv(@PathVariable("codigo") String cod1, HttpServletResponse servletResponse) throws IOException {
         servletResponse.setContentType("text/csv");
         servletResponse.addHeader("Content-Disposition", "attachment; filename=\"CP_MasVotadoPorProvincia_" + cod1 + ".csv\"");
-        List<CircunscripcionPartido> cp = masVotadosAutonomicoPorProvincia(cod1).getBody();
+        List<CircunscripcionPartido> cp = masVotadosAutonomicoPorProvinciaOficial(cod1).getBody();
         csvExportService.writeCPToCsv(cp, servletResponse.getWriter());
     }
 
@@ -182,7 +209,7 @@ public class ACircunscripcionPartidoController {
     public void masVotadosAutonomicoPorProvinciaInExcel(@PathVariable("codigo") String cod1, HttpServletResponse servletResponse) throws IOException {
         servletResponse.setContentType("application/octet-stream");
         servletResponse.addHeader("Content-Disposition", "attachment; filename=Mayorias_" + cod1 + "_PorProvincia.xlsx");
-        List<CircunscripcionPartido> cps = masVotadosAutonomicoPorProvincia(cod1).getBody();
+        List<CircunscripcionPartido> cps = masVotadosAutonomicoPorProvinciaOficial(cod1).getBody();
         AExcelExportService excelExportService = new AExcelExportService();
         excelExportService.writeToExcel((RandomAccess) cps, 3, servletResponse);
     }
